feat: add settings and user gender
